--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,83 +1,309 @@
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+@charset "utf-8";
+/* CSS Document */
+
+body {background:#f9f9f9; font-family:Arial, Helvetica, sans-serif; font-size:14px; margin:0px;}
+
+.container{width:100%; max-width:1140px; margin:0 auto;}
+.row {margin-left: -10px; margin-right: -10px;
 }
 
-body {
-  padding: 0;
+a:active,a:hover{outline:0}
+.clear{clear:both;}
+.list-inline>li {
+display: inline-block;
+padding-right: 20px;
+padding-left: 5px;
+padding-top:10px;
+padding-bottom:10px;
+}
+.list-inline>li:last-child {
+display: inline-block;
+padding-right: 0px;
+padding-left: 5px;
+padding-top:10px;
+padding-bottom:10px;
+}
+.list-inline {
+padding-left: 0;
+margin-left: -5px;
+list-style: none;
+margin-bottom:0;
+}
+.badge {
+display: inline-block;
+min-width: 10px;
+padding: 3px 7px;
+font-size: 12px;
+font-weight: 700;
+line-height: 1;
+color: #fff;
+text-align: center;
+white-space: nowrap;
+vertical-align: baseline;
+background-color: #f5a623;
+border-radius: 10px;
+}
+/*****Colors******/
+.base-blue{background:#0092d7;}
+
+.post-text {color:#404040; font-size:13px; font-weight:regular; line-height:14px; padding-bottom:15px;}
+.verb-text{color:#999999;}
+.comment-text{color:#404040; font-size:14px;}
+
+/****headers***/  
+.top-header-bar{background:#0091d7; height:50px; margin-bottom:10px;}
+.top-header-bar-icons {height:22px; width:100px; margin:14px 10px; display:inline-block; background:#eee;}
+
+.logo{display:inline-block; color:#fff; background:url(/images/main-logo.png) no-repeat; width:126px; height:35px; margin:7px 0;}
+.search-bar{display:inline-block; width:100%; max-width:570px; background:#fff; border-radius:5px; height:30px; margin:10px 0 10px 10px;}
+
+.stream-items{}
+.stream-items h1 {color:#031e29; font-weight:bold; font-size:14px;}
+.header-comments{}
+.header-comments h2 {color:#404040; font-size:13px; font-weight:bold;}
+
+.stats-row-gen{color:#999999; font-size:12px; font-weight:regular;}
+.time-stamp{color:#999999; font-size:12px; font-weight:regular;}
+.menu{color:#646464; font-size:14px; font-weight:regular;}
+
+.menu-label-tag{height:44px; border:0; background:transparent; padding-top:12px; margin-left:8px; text-overflow:ellipsis; overflow:hidden;}
+.menu-label-tag:hover{background:rgba(0,0,0.0.2); } 
+
+/******other commons*******/
+.pts{padding-top:5px;}
+.ptm{padding-top:10px;}
+.mls{margin-left:5px;}
+
+.negative-margins{margin:0 -15px;}
+
+
+/***********header section**********/
+
+
+
+
+
+/****Login and Sign Up*******/
+.app-ad-block { padding:50px;
+}
+.app-ad-block img {max-width:548px; text-align:right;}
+
+
+/************************login section***********************/
+.login-signup-form{
+background-color: #ffffff;
+border:1px solid #ddd;
+border-radius:5px;
+margin-bottom:20px;
+}
+.form-label{text-align:left; font-size:14px; color:#404040;}
+.placeholder{font-size:14px; padding:5px 8px; border:1px solid #fff; border-radius:3px; background:#ffffff; color:#999;}
+
+.field-row{margin-bottom:10px; display:block;}
+.field50-wrap{margin:0 0 10px 0px; width:100%;}
+.field50-left{float:left; width:49%; display:inline-block;}
+.field50-right{float:right; width:49%; display:inline-block;}
+
+.field33-left{float:left; width:32%; display:inline-block;}
+.field33-mid{float:left; width:32%; margin:0 1%; display:inline-block;}
+.field33-right{float:right; width:32%; display:inline-block;}
+
+.login-area{padding:15px; background:#efefef; border-bottom:1px solid #ddd; text-align:right;}
+
+.forgot-password{font-size:12px; color:#999; margin-bottom:5px;}
+.t-c{font-size:12px; color:#999; margin-bottom:10px;}
+
+.btn-signin{background:#f5a623; display:inline-block; width:100%; color:#fff; font-weight:bold; padding:8px 10px; font-size:16px;}
+.btn-signup{background:#0092d7; display:inline-block; width:100%; color:#fff; font-weight:bold; padding:8px 10px; font-size:16px;}
+
+.signup-area{padding:20px;}
+.signup-header{font-size:28px; color:#000; margin-bottom:10px;}
+
+
+
+/********stream page*********/
+.cols-holder{margin-left:0px;}
+.left-col{width:260px; height:auto; padding:0; float:left;}
+.center-col{width:590px; height:auto; margin-left:10px; padding:0; float:left; min-width:320px;}
+.right-col{width:260px; height:auto; margin-left:10px; padding:0; float:right;}
+
+
+/****Profile section****/
+.profile-info-wrapper{border:1px solid #ddd; padding:10px; margin-bottom:10px; background:#f5f5f5; border-radius:5px; text-align:center;}
+.profile-pix-card{ text-align:center; margin-bottom:10px;}
+.profile-pix-img{width:60px; height:60px; background:#000; display:inline-block; border-radius:100px;}
+.profile-name{font-weight:700; color:#000; font-size:18px;}
+.edit-profile{color:#999;}
+
+.profile-stats-wrapper {margin-top:20px;}
+
+.profile-stats-info{height:auto; display:inline-block;text-align:center ;margin-right:30px;}
+.profile-stats-info:last-child{height:auto; display:inline-block;text-align:center ;margin-right:0px;}
+
+.ps-friends{background:url(/images/icons/friends.png) no-repeat; background-position:left; padding-left:24px; font-size:26px; color:#646464; letter-spacing:-2px; line-height:24px; }
+.ps-pages{ background:url(/images/icons/pgs.png) no-repeat; background-position:left; padding-left:22px; font-size:26px; color:#646464; letter-spacing:-2px; line-height:24px; }
+.ps-groups{ background:url(/images/icons/grp.png) no-repeat; background-position:left; padding-left:30px; font-size:26px; color:#646464; letter-spacing:-2px; line-height:24px; }
+
+.profile-stats-info span{font-size:12px; color:#999; display:block; letter-spacing:normal; line-height:22px;}
+
+
+
+.profile-summary h1{color:#646464; font-weight:bold; font-size:14px;}
+
+/*****Side Menu****/
+.side-menu-wrapper{border:0px solid #ddd; padding:0px; margin-bottom:10px; background:#fff; border-radius:0px;}
+.list-group-icons {margin-right:10px;}
+
+
+/******status update section*****/
+.status-update-wrapper{border:1px solid #ddd; padding:0px; margin-bottom:10px; background:#fff; border-radius:5px;}
+.status-update-header{border-bottom:1px solid #ddd; padding:0px 15px 0 15px;}
+
+.status-update-icon-active{border:2px solid #0092d7; display:inline-block; text-align:center; border-radius:32px; background-color:#fff; padding:8px 8px 8px 10px; margin-right:5px; height:42px; width:42px; font-weight:bold;}
+.status-update-icon{border:2px solid #0092d7; display:inline-block; text-align:center; border-radius:32px; background-color:#0092d7; padding:8px 8px 8px 9px; margin-right:5px; height:42px; width:42px;}
+
+
+.status-update-form-wrapper{}
+.status-update-form{border:0px; padding:15px; color:#999; height:75px}
+.status-update-bottom{padding:5px 15px; background:#f5f5f5; border-radius:0 0 5px 5px;}
+.status-update-bottom-icons{float:left; display:inline-block;}
+.post-update-button{background:#f5a623; padding:5px 20px; display:inline-block; float:right; color:#fff; border-radius:3px; margin-top:6px; font-weight:bold;}
+
+
+/*****activity stream card******/
+.activity-stream-wrapper{height:560px; margin-bottom:10px;}
+.activity-card{border:1px solid #ddd; padding:15px; margin-bottom:10px; background:#fff; border-radius:5px;}
+.activity-header{padding-bottom:15px; margin-bottom:0px;}
+.content-owner-pix{float:left; width:60px; height:60px; background:#000; display:inline-block; border-radius:100px;}
+.content-owner-wrapper{float:left; display:inline-block; margin-left:15px; padding-top:10px;}
+.content-owner-name{font-weight:700; color:#000; font-size:18px;}
+.activity-verb{font-size:12px; color:#999;}
+.status-update-timestamp{float:right; font-size:12px; color:#999; padding:4px 10px 0 25px; margin-top:6px; background:url(../img/icons/status-update.png) no-repeat;}
+
+.text-content{padding:0; margin-bottom:15px;}
+.content-stats-wrapper{padding:10px 0;}
+.content-stats{float:left; display:inline-block; color:#999;}
+.more-content{float:right; font-weight:bold; color:#666;}
+
+.interaction-bar{background:#f5f5f5; padding:2px 15px; margin:0 -15px;}
+
+/******comment section*******/
+.comment-wrapper{border-bottom:1px solid #ddd; padding:15px; margin:0px -15px;}
+.comment-card{float:left; width:93%;}
+.comment-owner-pix{float:left; width:50px; height:50px; background:#000; display:inline-block; border-radius:100px;}
+.comment-details{display:block; padding:5px 15px 0 65px;}
+.comment-owner-name{font-weight:700; color:#000; font-size:18px;}
+.comment-socials{float:right; width:7%; text-align:center;}
+.comment-socials span{margin-bottom:10px;}
+
+/**post comment**/
+.post-comment-wrapper{border-bottom:1px solid #ddd; background:#f5f5f5; padding:10px 15px; margin:0 -15px;}
+.post-comment-form-wrap{display:block; padding:5px 15px 0 65px;}
+.post-comment-form{background:#fff; height:45px}
+.more-comments{padding-top:10px; font-size:14px; font-weight:bold; text-align:center; color:#069;}
+
+/*****advert card******/
+.advert-wrapper{border:1px solid #ddd; padding:15px; margin-bottom:10px; background:#fff; border-radius:5px; font-size:12px;}
+.ad-card{border-bottom:1px solid #ddd; margin-bottom:10px; padding-bottom:10px;}
+.ad-section-header{padding-bottom:5px;}
+.sponsored-title{float:left; text-transform:uppercase; font-weight:lighter;}
+.create-ad-link{float:right; font-size:12px;}
+.ad-image{width:100%; margin-bottom:10px; height:120px; background:#000;}
+.ad-title{font-weight:bold; color:#000;}
+.ad-link{}
+.ad-description{margin-bottom:0px; color:#999;}
+
+/******footer******/
+.footer{height:90px; border-top:1px solid #ddd; text-align:center;}
+
+
+/******media screens*******/
+@media (min-width: 320px) and (max-width : 479px) {
+.cols-holder{margin-left:0px;}
+.left-col{display:none; width:260px; height:auto;  padding:0; }
+.center-col{width:100%; height:auto; margin-left:0px; }
+.right-col{display:none; width:260px; height:auto; margin-left:0px; margin-top:10px;}
+.app-ad-block {
+display:none;
+}
+.login-signup-form{
+background-color: #fff;
+}
+.list-inline>li {
+display: inline-block;
+padding-right: 5px;
+padding-left: 5px;
+padding-top:10px;
+padding-bottom:10px;
+}
+.status-update-icon-active{border:2px solid #0092d7; display:inline-block; text-align:center; border-radius:32px; background-color:#fff; padding:4px 8px 8px 7px; margin-right:3px; height:35px; width:35px; font-weight:bold;}
+.status-update-icon{border:2px solid #0092d7; display:inline-block; text-align:center; border-radius:32px; background-color:#0092d7; padding:4px 8px 8px 7px; margin-right:3px; height:35px; width:35px;}
+
+}
+@media (min-width: 480px) and (max-width: 859px) {
+.container{width:100%; max-width:580px; margin:0 auto;}
+.cols-holder{margin-left:0px; position:relative;}
+.left-col{display:none; width:260px;height:auto; padding:0; }
+.center-col{width:100%; height:auto; margin-left:0px; }
+.right-col{display:none; width:260px; height:auto; margin-left:0px; margin-top:10px;}
+.app-ad-block {
+display:none;
+}
+.login-signup-form{
+background-color: #fff;
+
+}
+}
+@media (min-width: 860px) and (max-width: 1139px) {
+.container{width:100%; max-width:870px; margin:0 auto;}
+.cols-holder{margin-left:0px; }
+.left-col{width:260px; padding:0; height:auto; display:block; float:left; }
+.center-col{width:590px; height:auto; margin-left:10px; display:block; float:right; margin-bottom:10px; }
+.right-col{width:260px; height:auto; margin-left:0px; display:block; float:left; }
+.list-group {
+padding-left: 0;
+margin-bottom: 0px;
+}
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+
+
+/****** new header ****/
+.logo img {
+  margin: -30px 10px ;
+
+    max-width: 140px;
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.stream_icon_navbar  {
+  padding-right: 100px ;
+  border-right: 1px solid #0286BD;
+  img {
+    margin: auto;
+  }
 }
 
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
+.sign_up {
+  li {
+      margin-left: 20px;
   }
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+}
+
+
+/************ alert**************/
+.main-alert{
+  max-width: 400px;
+  margin: 0 auto;
+
+}
+.alert-hidden {
+  visibility: hidden;
 }
