--- a/app/views/main.html
+++ b/app/views/main.html
@@ -34,8 +34,8 @@
                         <div class="clear"></div>
                     </div>
                     <div class="field-row">
-                          <input name="userName" ng-model="userName" type="text" class="form-control" placeholder="Username">
-                            <p class="help-block" ng-show="register.userName.$dirty && register.userName.$invalid">Choose a UserName.</p>
+                          <input name="username" ng-model="username" type="text" class="form-control" placeholder="Username">
+                            <p class="help-block" ng-show="register.username.$dirty && register.username.$invalid">Choose a UserName.</p>
                     </div>
                     <div class="field-row">
                           <input name="email" ng-model="email" type="email" class="form-control" placeholder="email">
