--- a/app/views/header.html
+++ b/app/views/header.html
@@ -22,6 +22,8 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
              <li ng-show= "isAuthenticated() "ui-sref-active = "active"><a ui-sref="status" class= "sign_up"><span></span>Status</a></li>
+             <li ng-show= "isAuthenticated() "ui-sref-active = "active"><a ui-sref="statusupdate" class= "sign_up"><span></span>Status Update</a></li>
+              <li ng-show= "isAuthenticated() "ui-sref-active = "active"><a ui-sref="status" class= "sign_up"><span></span>Status Update</a></li>
               <li ng-hide= "isAuthenticated() "ui-sref-active = "active"><a ui-sref="register" class= "sign_up"><span></span>Sign Up</a></li>
               <li ng-hide= "!isAuthenticated()" ui-sref-active = "active"><a ui-sref="logout" class= "sign _up"><span></span>Log Out</a></li>
             </ul>
