--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,11 +5,11 @@
         <div class="col-sm-5 col-md-4 login-signup-form">
             <div class="negative-margins">
                 <!--login form-->
-                <form ng-submit="submit()" name="register" class="login-area" ng-controller = "RegisterCtrl"  novalidate>
+                <form ng-submit="submit()" name="login" class="login-area" ng-controller = "LoginCtrl"  novalidate>
                     <div class="field50-wrap">
                         <div class="field50-left">
                             <input name="email" ng-model="email" type="email" class="form-control" placeholder="email">
-                            <span class="help-block" ng-show="register.email.$dirty && register.email.$invalid">Please enter a proper email.</span>
+                            <span class="help-block" ng-show="login.email.$dirty && login.email.$invalid">Please enter a proper email.</span>
                         </div>
                         <div class="field50-right">
                             <input name="password" ng-model="password" type="password" class="form-control" placeholder="Password" required />
@@ -17,32 +17,37 @@
                         <div class="clear"></div>
                     </div>
                     <div class="forgot-password">forgot password?</div>
-                    <button ng-disabled="register.$invalid" type="submit" class="btn btn-signin">Sign In</button>
+                    <button  type="submit" class="btn btn-signin">Sign In</button>
                 </form>
                 <!--login form end-->
 
                 <!--sign up form-->
-                <form ng-submit="submit()" name="register" ng-controller = "RegisterCtrl" class="signup-area">
+                <form ng-submit="submit()" name="register" ng-controller = "RegisterCtrl" class="signup-area" >
                     <div class="signup-header">Sign Up</div>
                     <div class="field50-wrap">
                         <div class="field50-left">
-                            <input type="firstname" class="form-control" placeholder="First name">
+                            <input type="text" name= "firstname" ng-model= "firstname" class="form-control" placeholder="First name" required >
                         </div>
                         <div class="field50-right">
-                            <input type="lastname" class="form-control" placeholder="Last Name">
+                            <input type="text" name = "lastname" ng-model= "lastname" class="form-control" placeholder="Last Name" required >
                         </div>
                         <div class="clear"></div>
                     </div>
                     <div class="field-row">
-                          <input name="username" ng-model="username" type="text" class="form-control" placeholder="Username">
-                            <p class="help-block" ng-show="register.username.$dirty && register.username.$invalid">Choose a UserName.</p>
+                          <input name="title" ng-model="title" type="text" class="form-control" placeholder="Title" required >
+                            
                     </div>
                     <div class="field-row">
-                          <input name="email" ng-model="email" type="email" class="form-control" placeholder="email">
+                          <input name="username" ng-model="username" type="text" class="form-control" placeholder="Username" required >
+                            
+                    </div>
+
+                    <div class="field-row">
+                          <input name="email" ng-model="email" type="email" class="form-control" placeholder="email" required>
                             <p class="help-block" ng-show="register.email.$dirty && register.email.$invalid">Please enter a proper email.</p>
                     </div>
                     <div class="field-row">
-                        <input type="mobile_number" class="form-control" placeholder="Mobile Number">
+                        <input type="cellphone" name = "cellphone" class="form-control" ng-model="cellphone" placeholder="cellphone">
                     </div>
                     <div class="field-row">
                         <input name="password" ng-model="password" type="password" class="form-control" placeholder="Password" required />
