Login and Identity Service Working

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -47,7 +47,7 @@
                             <p class="help-block" ng-show="register.email.$dirty && register.email.$invalid">Please enter a proper email.</p>
                     </div>
                     <div class="field-row">
-                        <input type="cellphone" name = "cellphone" class="form-control" ng-model="cellphone" placeholder="cellphone">
+                        <input name = "cellphone" type="text"  class="form-control" ng-model="cellphone" placeholder="Cellphone">
                     </div>
                     <div class="field-row">
                         <input name="password" ng-model="password" type="password" class="form-control" placeholder="Password" required />
