--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,11 +8,10 @@
                 <form ng-submit="submit()" name="login" class="login-area" ng-controller = "LoginCtrl"  novalidate>
                     <div class="field50-wrap">
                         <div class="field50-left">
-                            <input name="email" ng-model="email" type="email" class="form-control" placeholder="email">
-                            <span class="help-block" ng-show="login.email.$dirty && login.email.$invalid">Please enter a proper email.</span>
+                            <input type="text" name="username" ng-model="username"  class="form-control" placeholder="Username" required >
                         </div>
                         <div class="field50-right">
-                            <input name="password" ng-model="password" type="password" class="form-control" placeholder="Password" required />
+                            <input type="password" name="password" ng-model="password"  class="form-control" placeholder="Password" required >
                         </div>
                         <div class="clear"></div>
                     </div>
@@ -26,7 +25,7 @@
                     <div class="signup-header">Sign Up</div>
                     <div class="field50-wrap">
                         <div class="field50-left">
-                            <input type="text" name= "firstname" ng-model= "firstname" class="form-control" placeholder="First name" required >
+                            <input type="text" name = "firstname" ng-model = "firstname" class="form-control" placeholder="First name" required >
                         </div>
                         <div class="field50-right">
                             <input type="text" name = "lastname" ng-model= "lastname" class="form-control" placeholder="Last Name" required >
@@ -34,23 +33,23 @@
                         <div class="clear"></div>
                     </div>
                     <div class="field-row">
-                          <input name="title" ng-model="title" type="text" class="form-control" placeholder="Title" required >
+                          <input type="text" name="title" ng-model= "title"  class="form-control" placeholder="Title" required >
                             
                     </div>
                     <div class="field-row">
-                          <input name="username" ng-model="username" type="text" class="form-control" placeholder="Username" required >
+                          <input type="text" name="username" ng-model="username"  class="form-control" placeholder="Username" required >
                             
                     </div>
 
                     <div class="field-row">
-                          <input name="email" ng-model="email" type="email" class="form-control" placeholder="email" required>
+                          <input type="email" name="email" ng-model="email"  class="form-control" placeholder="email" required>
                             <p class="help-block" ng-show="register.email.$dirty && register.email.$invalid">Please enter a proper email.</p>
                     </div>
                     <div class="field-row">
-                        <input name = "cellphone" type="text"  class="form-control" ng-model="cellphone" placeholder="Cellphone">
+                        <input type="text" name = "cellphone"   class="form-control" ng-model="cellphone" placeholder="Cellphone">
                     </div>
                     <div class="field-row">
-                        <input name="password" ng-model="password" type="password" class="form-control" placeholder="Password" required />
+                        <input type="password" name="password" ng-model="password"  class="form-control" placeholder="Password" required >
                     </div>
                     <div class="field-row">
                         <input name="password_confirm" ng-model="password_confirmation" type="password" class="form-control" placeholder="Confirm Password" validate-equals='password'/>
@@ -59,7 +58,7 @@
                     <div class="form-label">Date of Birth</div>
                     <div class="field-row">
                         <div class="field33-left">
-                            <select name="month" class="form-control" placeholder="Confirm Password">
+                            <select name="month" class="form-control" placeholder="Select Month">
                                 <option value="Month">Month</option>
                                 <option value="Jan">Jan</option>
                                 <option value="Feb">Feb</option>
@@ -76,7 +75,7 @@
                             </select>
                         </div>
                         <div class="field33-mid">
-                            <select name="month" class="form-control" placeholder="Confirm Password">
+                            <select name="month" class="form-control" placeholder="Select day">
                                 <option value="Day" selected="SELECTED">Day</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -112,7 +111,7 @@
                             </select>
                         </div>
                         <div class="field33-right">
-                            <select name="month" class="form-control" placeholder="Confirm Password">
+                            <select name="month" class="form-control" placeholder="Select Year">
                                 <option value="Year" selected="selected">Year</option>
                                 <option value="2015">2015</option>
                                 <option value="2014">2014</option>
