--- a/app/views/statusupdate.html
+++ b/app/views/statusupdate.html
@@ -1,2 +1,113 @@
 <p>This is the statusupdate view.</p>
 <div ng-repeat=" statusupdate  in statusupdate ">{{statusupdate}}</div> 
+
+<ul>
+	<li ng-repeat= "statusupdate  in statusupdate" >
+		{{statusupdate.body}}
+		<br>{{statusupdate.author}}
+	</li>
+</ul>
+
+
+
+
+
+<div class = "row">
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 center-col">
+    <form ng-submit="submit()" name="statusupdate " class="status-update-wrapper" ng-controller = "StatusupdateCtrl"  novalidate>
+            <div class="status-update-header">
+                <ul class="list-inline">
+                    <li><span class="status-update-icon-active"><img src="images/icons/status-blue.png" width="18" ></span>Status</li>
+                    <li><span class="status-update-icon"><img src="images/icons/pv-white.png" width="18" ></span>Photo/Video</li>
+                    <li><span class="status-update-icon"><img src="images/icons/blog-white.png" width="18" ></span>Blog</li>
+                </ul>
+            </div>
+            <!--post update-->
+            <div class="status-update-form-wrapper">
+                <input name = "content" type = "text" ng-model = "content "class="status-update-form" placeholder= "whats on your mind?" />
+          </div>
+          <div class="status-update-bottom">
+          <div class="status-update-bottom-icons">
+            <ul class="list-inline">
+                    <li><span><img src="images/icons/photo.png" width="18" ></span></li>
+                    <li><span><img src="images/icons/tag.png" width="18" ></span></li>
+                    <li><span><img src="images/icons/location.png" width="18" ></span></li>
+            </ul>
+           </div>
+            <button type="submit" class="post-update-button">Post</button>
+            <div class="clear"></div>
+          </div>
+        </form>
+	
+	     <!--activity stream card-->
+     	<div class="activity-stream-wrapper" ng-repeat= "statusupdate  in statusupdate" >
+        	<div class="activity-card">
+            <div class="activity-header">
+            	<div class="content-owner-pix"></div>
+                <div class="content-owner-wrapper">
+                	<div class="content-owner-name">{{statusupdate.author}}</div>
+                    <div class="activity-verb">updated his status</div>
+                </div>
+                <div class="status-update-timestamp"><span am-time-ago="{{statusdate.created_at}}"></span>2hours ago</div>
+            <div class="clear"></div>
+            </div>
+            <!--activity header stops-->
+            <div class="text-content">
+            {{statusupdate.body}}
+            </div>
+            <!--content stats-->
+            <div class="content-stats-wrapper">
+            	<div class="content-stats">82 Likes <span style="margin:0 5px" class="glyphicon glyphicon-asterisk"></span>14 Comments</div>
+                <div class="more-content"><img src="images/icons/more.png" width="40" ></span></div>
+            	<div class="clear"></div>
+            </div>
+            <!--interactin bar-->
+            <div class="interaction-bar">
+            	<ul class="list-inline">
+                    <li><span><img src="images/icons/like.png" width="18" ></span> Like</li>
+                    <li><span><img src="images/icons/comment.png" width="18" ></span> Comment</li>
+                    <li><span><img src="images/icons/share.png" width="18" ></span> Share</li>
+            	</ul>
+            </div>
+            <!--comment section-->
+            <!--comment card1-->
+            <div class="comment-wrapper">
+            	<div class="comment-card">
+                	<div class="comment-owner-pix"></div>
+                    <div class="comment-details">
+                    	<div class="comment-owner-name">Paul Imisi</div>
+                        <div class="comment-text">She has struggled relentlessly to awaken and empower the Nigerian woman through her various summits,</div>
+                    </div>
+                <div class="clear"></div>
+                </div>
+                <div class="comment-socials"><span><img src="images/icons/like.png" width="18" ><br>15</span></div>
+            <div class="clear"></div>
+            </div>
+            <!--comment card2-->
+            <div class="comment-wrapper">
+            	<div class="comment-card">
+                	<div class="comment-owner-pix"></div>
+                    <div class="comment-details">
+                    	<div class="comment-owner-name">Paul Imisi</div>
+                        <div class="comment-text">She has struggled relentlessly to awaken.</div>
+                    </div>
+                <div class="clear"></div>
+                </div>
+                <div class="comment-socials"><span><img src="images/icons/like.png" width="18" ><br>15</span></div>
+            <div class="clear"></div>
+            </div>
+            <!--comment card2 ends-->
+            <!--post comment-->
+            <div class="post-comment-wrapper">
+            	<div class="comment-owner-pix"></div>
+                <div class="post-comment-form-wrap">
+                  <div class="post-comment-form"></div>
+                </div>
+            <div class="clear"></div>
+            </div>
+            <div class="more-comments">See 25 more</div>
+            </div>
+        </div>
+     </div>
+     </div>
+</div>
